make sure texts appear in one line on mobile

--- a/src/components/DropdownMenuButton/styles.scss
+++ b/src/components/DropdownMenuButton/styles.scss
@@ -4,9 +4,9 @@
 .drop-down-menu-btn {
 
   &__btn {
-    padding: 4px 12px;
+    padding: 4px 10px;
     min-height: 32px;
-    margin: 4px 8px;
+    margin: 4px 6px;
     font-size: 0.75rem;
 
     @media screen and (min-width: map-get($breakpoints, sm)) {
@@ -29,7 +29,7 @@
     }
 
     &:first-of-type {
-      margin: 4px 8px 4px 0;
+      margin: 4px 6px 4px 0;
 
       @media screen and (min-width: map-get($breakpoints, sm)) {
         margin: 4px 12px 4px 0;
